--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -13,7 +13,7 @@ body {
     font-size: 65px;
     letter-spacing: 1px;
     margin-left: 20px;
-    font-family: "racing sans one";
+    font-family: "racing sans one" !important;
 }
 #main {
     width: 100%;
@@ -30,7 +30,7 @@ li {
     right: 150px;
 }
 #greeting {
-    font-family: "racing sans one";
+    font-family: "racing sans one" !important;
     font-size: 30px;
     margin: 0px auto;
     width: 100%;
@@ -41,23 +41,37 @@ li {
     text-align: center;
     margin: 20px auto;
 }
+.poll-option {
+    margin-left: 15px;
+    font-size: 25px;
+}
+.poll-container {
+    margin-left: 150px !important;
+}
+.vote-options {
+    margin-left: 200px !important;
+    margin-bottom: 10px !important;
+    margin: 0px auto;
+}
 #vote-page {
     font-size: 25px;
-    width: 38%;
+    width: 550px;
     min-height: 450px;
     max-height: 1000px;
     margin: 0px auto;
-    background-color: silver;
     padding: 35px;
     text-align: left;
     position: relative;
-    bottom: 180px;
-}
-.vote-options {
-    margin: 0px auto;
+    top: -220px;
+    background-color: honeydew;
+    box-shadow: 0 0 10px #666666;
 }
 .question, span, #no-vote {
     font-family: "Roboto";
+}
+.question {
+    font-family: 50px !important;
+    text-align: center;
 }
 #no-vote {
     margin: 0px auto;
@@ -68,7 +82,7 @@ li {
     font-size: 60px;
     letter-spacing: 5px;
     word-spacing: 5px;
-    font-family: "racing sans one";
+    font-family: "racing sans one" !important;
     color: white;
 }
 #create {
@@ -76,47 +90,61 @@ li {
     bottom: 250px;
 }
 #login, #register {
-    font-size: 25px;
-    background-color: silver;
+    font-size: 18px;
     font-family: "Roboto";
+    width: 500px !important;
+    height: 300px;
+    padding-top: 80px;
+    box-shadow: 0 0 10px #666666;
+    background-color: honeydew;
     position: relative;
-    bottom: 200px;
-    margin-bottom: 25px;
-    color: black;
+    bottom: 150px;
 }
-.pollbox:hover {
-    color: royalblue;
-    background-color: silver;
+#register {
+    text-align: right;
 }
-.pollbox {
+#inner-register {
+    position: relative;
+    right: 50px;
+}
+#login input, #register input, #create-page input {
+    width: 270px;
+    border-radius: 0px;
+    height: 30px;
+    border: none;
+    padding: 5px;
+}
+#incorrect {
+    color: red;
+}
+.pollbox, .list-link {
     font-size: 20px;
     cursor: pointer;
     font-family: "Roboto";
     position: relative;
     bottom: 200px;
-    margin-bottom: 25px;
-    color: black;
-
+    margin-bottom: 30px;
+    width: 500px;
+    margin: 0 auto;
 }
 .poll-title {
-    width: 65%;
     margin: 0px auto;
-    background-color: silver;
+    padding: 5px;
+    background-color: #5D6A77;
+    color: #DDDEDE;
+    transition: background-color .5s;
 }
-.list-link {
-    font-size: 20px;
-    font-family: "Roboto";
-    position: relative;
-    bottom: 200px;
-    margin-bottom: 25px;
-    color: black;
+.poll-title:hover {
+    background-color: #7FABD7;
+    color: white;
 }
 canvas {
     width: 300px;
     height: 300px;
-    float: left;
+    margin: 0 auto;
+    margin-bottom: 15px;
 }
-button {
+#create {
     height: 50px;
     width: 300px;
     border: 1px solid darkgreen;
@@ -125,21 +153,43 @@ button {
     background-color: forestgreen;
     color: white;
 }
-button:hover {
+#create:hover {
     cursor: pointer;
     background-color: darkgreen;
 }
-.like {
-    background-color: royalblue;
+.vote-options, #comment-button, #create-poll-button, .delete-poll {
+    border: none;
+    width: 150px;
+    height: 50px;
+    background-color: #397DC1 !important;
+    font-size: 20px;
+    color: white;
+    transition: all .5s;
 }
-.dislike {
-    background-color: orangered;
+.vote-options:hover, #comment-button:hover, #create-poll-button:hover, .delete-poll:hover {
+    cursor: pointer;
+    background-color: #78AFE5 !important;
 }
-.like:hover {
-    background-color: midnightblue;
+#login-button, #register-button, .userButtons {
+    height: 35px;
+    width: 150px;
+    border: none;
+    font-size: 20px;
+    background-color: #397DC1 !important;
+    color: white;
+    transition: all .5s;
 }
-.dislike:hover {
-    background-color: red;
+#login-button:hover, #register-button:hover, .userButtons:hover {
+    cursor: pointer;
+    background-color: #78AFE5 !important;
+}
+#votelist-cont {
+    margin-top: 30px;
+    width: 100%;
+    max-height: 1000px;
+}
+.user-name, .vote-date {
+    margin-bottom: 0px !important;
 }
 label {
     font-size: 20px;
@@ -148,9 +198,12 @@ label {
     font-family: "roboto";
     position: relative;
     bottom: 210px;
+    margin: 0 auto;
+    width: 500px;
 }
 #question-box, #choices-box {
     width: 85%;
+    text-align: right;
     margin: 0px auto;
 }
 input:not([type=radio]) {
@@ -167,20 +220,21 @@ input:not([type=radio]) {
     margin: 0px auto;
 }
 #comment-container {
-    margin-top: -170px;
+    margin-top: -190px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
 }
 #comment-create {
     resize: none;
-    width: 60%;
+    width: 400px;
     height: 100px;
     border-radius: 5px;
 }
 #comment-button {
     display: block;
     margin: 0px auto;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
+    width: 250px !important;
 }
 .current-comment-box {
     margin: 25px;
@@ -192,8 +246,14 @@ input:not([type=radio]) {
 /*media queries for mobile*/
 @media screen and (max-width: 800px) {
     #login, #register {
-        width: 90%;
+        width: 90% !important;
         bottom: 160px;
+    }
+    .pollbox {
+        width: 100%;
+    }
+    p > label {
+        width: 100%;
     }
     .pollbox {
         bottom: 160px;
@@ -208,21 +268,20 @@ input:not([type=radio]) {
     li {
         right: 0px;
     }
-    .like, .dislike {
-        width: 50%;
+    #inner-register {
+        right: 130px;
     }
-    /*#greeting {
-        visibility: hidden;
-    }*/
+    .poll-container {
+        margin-left: -70px;
+    }
+    #vote-page {
+        top: -190px;
+    }
     /*#slogan, #create {
         bottom: 300px
     }*/
 }
 @media screen and (max-width: 620px) {
-    #greeting {
-        position: relative;
-        bottom: 450px;
-    }
     #slogan {
         font-size: 40px;
     }
@@ -236,9 +295,34 @@ input:not([type=radio]) {
     canvas {
         display: block;
     }
+    #login, #register {
+        bottom: 100px;
+    }
+    #inner-register {
+        text-align: center;
+        width: 90%;
+        position: initial;
+    }
+    #register {
+        height: 440px;
+    }
+    .poll-container {
+        margin-left: -20px !important;
+    }
+    .vote-options {
+        margin-left: 0px !important;
+        margin: 0px auto !important;
+    }
+    #comment-create {
+        width: 65%;
+    }
 }
 @media screen and (max-width: 400px) {
-    #greeting {
-        bottom: 500px;
+    label {
+        text-align: left;
+    }
+    #login, #register {
+        bottom: 150px;
+        height: 420px;
     }
 }
